client/k8s/deployment.yaml
apiVersion: apps/v1                  
kind: Deployment                     
metadata:                            
  creationTimestamp: null            
  labels:                            
    run: frontend                    
  name: frontend                     
spec:                                
  replicas: 1                        
  selector:                          
    matchLabels:                     
      run: frontend                  
  strategy: {}                       
  template:                          
    metadata:                        
      creationTimestamp: null        
      labels:                        
        run: frontend                
    spec:                            
      containers:                    
      - image: kibin8008/kibin-frontend:latest
        imagePullPolicy: Always
        name: frontend               
        ports:                       
        - containerPort: 80
