client/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1beta1 # for versions before 1.14 use extensions/v1beta1
kind: Ingress
metadata:
  name: ingressboardsfrontend
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
  - host: proflo.app.cgi-w3.stackroute.io
    http:
      paths:
      - path: /?(.+)
        backend:
          serviceName: frontend
          servicePort: 80
